--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,15 @@
 <header class="site-header" data-mobile-nav>
 	<div class="nav-inner">
 		<a class="brand" href="/" aria-label="I know a place home">
-			<img src="/assets/images/logo.png" alt="I know a place logo" class="brand-logo" />
 			<span class="brand-name">I know a place</span>
+			<img src="/assets/images/logo_wide.png" alt="I know a place logo" class="brand-logo" />
 		</a>
 		<nav id="primary-nav" class="main-nav" aria-label="Primary">
+			<a href="/install/" class="nav-link nav-download">Download</a>
 			<a href="/owners/" class="nav-link">Owners</a>
 			<a href="/contact/" class="nav-link">Contact</a>
 		</nav>
+		<a href="{{ site.app_store_url }}" class="download-button">Download</a>
 		<button class="hamburger" aria-label="Menu" aria-controls="primary-nav" aria-expanded="false" type="button">
 			<span class="bar"></span>
 			<span class="bar"></span>
