--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>{% if page.title %}{{ page.title }} · {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{{ page.description | default: site.description }}" />
+	<link rel="stylesheet" href="{{ '/assets/css/header.css' | relative_url }}" />
+	<link rel="stylesheet" href="{{ '/assets/css/footer.css' | relative_url }}" />
   <link rel="stylesheet" href="{{ '/assets/css/landing.css' | relative_url }}" />
   {% if page.css %}
     <link rel="stylesheet" href="{{ page.css | relative_url }}" />
@@ -17,8 +19,6 @@
     <link rel="icon" type="image/png" sizes="128x128" href="{{ '/assets/favicons/favicon-128.png' | relative_url }}">
     <link rel="icon" type="image/png" sizes="256x256" href="{{ '/assets/favicons/favicon-256.png' | relative_url }}">
     <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicons/favicon-180.png' | relative_url }}">
-    <link rel="icon" type="image/png" sizes="192x192" href="{{ '/assets/favicons/favicon-192.png' | relative_url }}">
-    <link rel="icon" type="image/png" sizes="512x512" href="{{ '/assets/favicons/favicon-512.png' | relative_url }}">
   {% include meta-open-graph.html %}
 </head>
 <body>
