--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>{% if page.title %}{{ page.title }} · {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{{ page.description | default: site.description }}" />
+
+  {% seo %}
+
 	<link rel="stylesheet" href="{{ '/assets/css/header.css' | relative_url }}" />
 	<link rel="stylesheet" href="{{ '/assets/css/footer.css' | relative_url }}" />
   <link rel="stylesheet" href="{{ '/assets/css/landing.css' | relative_url }}" />
@@ -19,7 +20,6 @@
     <link rel="icon" type="image/png" sizes="128x128" href="{{ '/assets/favicons/favicon-128.png' | relative_url }}">
     <link rel="icon" type="image/png" sizes="256x256" href="{{ '/assets/favicons/favicon-256.png' | relative_url }}">
     <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicons/favicon-180.png' | relative_url }}">
-  {% include meta-open-graph.html %}
 </head>
 <body>
   {% include header.html %}
